--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
+    "@heroicons/vue": "^2.2.0",
     "@popperjs/core": "^2.11.8",
+    "@tailwindcss/forms": "^0.5.10",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "core-js": "^3.8.3",
@@ -22,7 +24,10 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
+    "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.8"
   },
   "browserslist": [
     "> 1%",
